--- a/privacy.html
+++ b/privacy.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy - NexSound</title>
   <style>
     body {
@@ -20,14 +20,38 @@
 <body>
   <h1>Privacy Policy for NexSound</h1>
   <p><strong>Effective Date:</strong> May 1, 2025</p>
-  <p>NexSound does not collect, store, or share any personal information.</p>
-  <p>This app is designed solely to play relaxing sounds for your well-being. It does not use analytics, tracking tools, or request access to your device’s data, such as contacts, location, camera, or microphone.</p>
-  <p>We take your privacy seriously by ensuring that:</p>
+
+  <p>At NexSound, your privacy is important to us. This Privacy Policy explains what information we collect and how we use it.</p>
+
+  <h2>Information We Collect</h2>
+  <p>We may collect and store your email address when you sign up or log in to the app. This allows us to:</p>
   <ul>
-    <li>No user data is collected or transmitted.</li>
-    <li>No third-party services are integrated that track user behavior.</li>
+    <li>Authenticate your login and manage your account</li>
+    <li>Provide membership-related features</li>
+    <li>Send updates or marketing communications (if you have opted in)</li>
   </ul>
-  <p>If you have any questions about this privacy policy, you may contact us at:<br>
-  <strong>Email:</strong> phamquocbuu@gmail.com</p>
+
+  <h2>How We Use Your Information</h2>
+  <p>We use your email address solely for the following purposes:</p>
+  <ul>
+    <li>Managing your account and preferences</li>
+    <li>Notifying you of important updates or offers (only if permitted)</li>
+  </ul>
+
+  <h2>Data Sharing</h2>
+  <p>We do not sell or share your email address with third-party advertisers. Your data is handled securely and is only used for the purposes described above.</p>
+
+  <h2>Your Rights</h2>
+  <p>You may contact us at any time to request:</p>
+  <ul>
+    <li>Access or correction of your information</li>
+    <li>Unsubscribing from marketing communications</li>
+    <li>Account deletion</li>
+  </ul>
+
+  <h2>Contact Us</h2>
+  <p>If you have any questions about this Privacy Policy, please contact us at:<br>
+  <strong>Email:</strong> your-email@example.com</p>
+
 </body>
 </html>
