--- a/term.html
+++ b/term.html
@@ -40,13 +40,13 @@
   <p>All sounds and materials in RexSound are owned by us or properly licensed. You may not copy, distribute, or reuse them outside the app.</p>
 
   <h2>4. Termination</h2>
-  <p>You may delete your account at any time by contacting our support team at <a href="mailto:support@rexsound.com">support@rexsound.com</a>. We reserve the right to remove accounts that violate these terms.</p>
+  <p>You may delete your account at any time by contacting our support team at <a href="mailto:support@nexis.vn">support@nexis.vn</a>. We reserve the right to remove accounts that violate these terms.</p>
 
   <h2>5. Changes to the Terms</h2>
   <p>We may update these terms from time to time. If we do, we will notify you in the app or by email.</p>
 
   <h2>6. Contact</h2>
-  <p>If you have questions about these terms, please contact us at <a href="mailto:support@rexsound.com">support@rexsound.com</a>.</p>
+  <p>If you have questions about these terms, please contact us at <a href="mailto:support@nexis.vn">support@nexis.vn</a>.</p>
 
   <p><em>Last updated: May 20, 2025</em></p>
 
