--- a/term.html
+++ b/term.html
@@ -40,8 +40,9 @@
   <p>All sounds and materials in RexSound are owned by us or properly licensed. You may not copy, distribute, or reuse them outside the app.</p>
 
   <h2>4. Termination</h2>
-  <p>You may delete your account at any time by contacting our support team at <a href="mailto:support@nexis.vn">support@nexis.vn</a>. We reserve the right to remove accounts that violate these terms.</p>
-
+  <p>You may delete your account at any time by using the "Delete Account" feature in the Settings section of the app. Once deleted, your data will be removed from our systems unless we are required by law to retain certain information.</p>
+  <p>We reserve the right to remove accounts that violate these terms or are found to be misused.</p>
+  
   <h2>5. Changes to the Terms</h2>
   <p>We may update these terms from time to time. If we do, we will notify you in the app or by email.</p>
 
