--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Privacy Policy - NexSound</title>
+  <title>Privacy Policy – RexSound</title>
   <style>
     body {
       max-width: 720px;
@@ -18,40 +18,43 @@
   </style>
 </head>
 <body>
-  <h1>Privacy Policy for NexSound</h1>
+  <h1>Privacy Policy for RexSound</h1>
   <p><strong>Effective Date:</strong> May 1, 2025</p>
 
-  <p>At NexSound, your privacy is important to us. This Privacy Policy explains what information we collect and how we use it.</p>
+  <p>At RexSound, we respect your privacy. This Privacy Policy explains what data we collect, how we use it, and your rights regarding that data.</p>
 
   <h2>Information We Collect</h2>
-  <p>We may collect and store your email address when you sign up or log in to the app. This allows us to:</p>
+  <p>We collect and store only your email address when you sign in to the app. We do not collect any other personal data, usage behavior, or device identifiers.</p>
+
+  <h2>Purpose of Data Collection</h2>
+  <p>Your email address is used for the following purposes:</p>
   <ul>
     <li>Authenticate your login and manage your account</li>
-    <li>Provide membership-related features</li>
-    <li>Send updates or marketing communications (if you have opted in)</li>
+    <li>Save and sync your preferences across devices</li>
+    <li>Send important updates or optional marketing communications (if you consent)</li>
   </ul>
 
-  <h2>How We Use Your Information</h2>
-  <p>We use your email address solely for the following purposes:</p>
-  <ul>
-    <li>Managing your account and preferences</li>
-    <li>Notifying you of important updates or offers (only if permitted)</li>
-  </ul>
+  <h2>How We Handle Your Data</h2>
+  <p>We do not sell, rent, or share your email address with third-party advertisers. We do not use any third-party analytics SDKs that access personal data. Your data is securely stored and used only to operate essential app features.</p>
 
-  <h2>Data Sharing</h2>
-  <p>We do not sell or share your email address with third-party advertisers. Your data is handled securely and is only used for the purposes described above.</p>
+  <h2>Consent and Control</h2>
+  <p>By signing in, you consent to the use of your email for the purposes stated above. You can withdraw consent at any time by deleting your account.</p>
+
+  <h2>Data Retention and Deletion</h2>
+  <p>You can delete your account anytime through the "Delete Account" option in the app's Settings menu. Upon deletion, your data will be permanently removed from our system unless we are legally required to retain it.</p>
 
   <h2>Your Rights</h2>
-  <p>You may contact us at any time to request:</p>
+  <p>You may contact us at any time to:</p>
   <ul>
-    <li>Access or correction of your information</li>
-    <li>Unsubscribing from marketing communications</li>
-    <li>Account deletion</li>
+    <li>Request access to your data</li>
+    <li>Correct or update your email address</li>
+    <li>Unsubscribe from marketing communications</li>
+    <li>Request deletion of your account and data</li>
   </ul>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions about this Privacy Policy, please contact us at:<br>
-  <strong>Email:</strong> your-email@example.com</p>
+  <p>If you have questions or concerns about this policy, please contact us:</p>
+  <p><strong>Email:</strong> support@rexsound.com</p>
 
 </body>
 </html>
