--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
 
   <h2>Contact Us</h2>
   <p>If you have questions or concerns about this policy, please contact us:</p>
-  <p><strong>Email:</strong> support@rexsound.com</p>
+  <p><strong>Email:</strong> support@nexis.vn</p>
 
 </body>
 </html>
