--- a/privacy.html
+++ b/privacy.html
@@ -21,39 +21,19 @@
   <h1>Privacy Policy for RexSound</h1>
   <p><strong>Effective Date:</strong> May 1, 2025</p>
 
-  <p>At RexSound, we respect your privacy. This Privacy Policy explains what data we collect, how we use it, and your rights regarding that data.</p>
+  <p>At RexSound, we respect your privacy. This Privacy Policy outlines how we handle your data.</p>
 
-  <h2>Information We Collect</h2>
-  <p>We collect and store only your email address when you sign in to the app. We do not collect any other personal data, usage behavior, or device identifiers.</p>
+  <h2>No Personal Information Collected</h2>
+  <p>RexSound does not require users to create an account or sign in. We do not collect, store, or track any personal information, email addresses, device identifiers, or usage behavior.</p>
 
-  <h2>Purpose of Data Collection</h2>
-  <p>Your email address is used for the following purposes:</p>
-  <ul>
-    <li>Authenticate your login and manage your account</li>
-    <li>Save and sync your preferences across devices</li>
-    <li>Send important updates or optional marketing communications (if you consent)</li>
-  </ul>
+  <h2>No Analytics or Third-Party Tracking</h2>
+  <p>We do not use any analytics SDKs or third-party tracking services in the app. Your usage remains completely private.</p>
 
-  <h2>How We Handle Your Data</h2>
-  <p>We do not sell, rent, or share your email address with third-party advertisers. We do not use any third-party analytics SDKs that access personal data. Your data is securely stored and used only to operate essential app features.</p>
+  <h2>Local Preferences Only</h2>
+  <p>All app preferences and settings are stored locally on your device. We do not sync or transmit any data to our servers.</p>
 
-  <h2>Consent and Control</h2>
-  <p>By signing in, you consent to the use of your email for the purposes stated above. You can withdraw consent at any time by deleting your account.</p>
-
-  <h2>Data Retention and Deletion</h2>
-  <p>You can delete your account anytime through the "Delete Account" option in the app's Settings menu. Upon deletion, your data will be permanently removed from our system unless we are legally required to retain it.</p>
-
-  <h2>Your Rights</h2>
-  <p>You may contact us at any time to:</p>
-  <ul>
-    <li>Request access to your data</li>
-    <li>Correct or update your email address</li>
-    <li>Unsubscribe from marketing communications</li>
-    <li>Request deletion of your account and data</li>
-  </ul>
-
-  <h2>Contact Us</h2>
-  <p>If you have questions or concerns about this policy, please contact us:</p>
+  <h2>Contact</h2>
+  <p>If you have any questions about this Privacy Policy, feel free to contact us:</p>
   <p><strong>Email:</strong> support@nexis.vn</p>
 
 </body>
