--- a/term.html
+++ b/term.html
@@ -19,37 +19,29 @@
 </head>
 <body>
 
-  <h1>Terms of Use</h1>
+  <h1>Terms of Use for RexSound</h1>
 
-  <p>Welcome to RexSound, a mobile application designed to help you relax with soothing sounds. By using our app, you agree to the following terms and conditions.</p>
+  <p>Welcome to RexSound, a mobile app designed to help you relax through calming nature sounds and ambient audio. By using the app, you agree to the terms outlined below.</p>
 
-  <h2>1. User Accounts</h2>
-  <p>To personalize your experience, we require you to sign in with your email address. This allows us to:</p>
-  <ul>
-    <li>Save your favorite sounds and settings</li>
-    <li>Sync your playback preferences across devices</li>
-    <li>Send occasional updates or tips related to the app</li>
-  </ul>
-  <p>We do not share your email with third parties or use it for advertising purposes.</p>
+  <h2>1. No Account Required</h2>
+  <p>RexSound does not require you to create an account or provide any personal information. All preferences and settings are stored locally on your device.</p>
 
-  <h2>2. Privacy and Data Collection</h2>
-  <p>We collect only your email address. We do not collect sensitive or personal data beyond what is necessary to operate the app.</p>
-  <p>For more information, please read our <a href="/privacy-policy.html">Privacy Policy</a>.</p>
+  <h2>2. Usage Rules</h2>
+  <p>You agree to use RexSound only for personal, non-commercial purposes. You may not modify, reproduce, or redistribute any content provided by the app.</p>
 
-  <h2>3. Content Ownership</h2>
-  <p>All sounds and materials in RexSound are owned by us or properly licensed. You may not copy, distribute, or reuse them outside the app.</p>
+  <h2>3. Intellectual Property</h2>
+  <p>All sounds, images, and other materials within RexSound are owned by us or licensed for our use. These assets are protected by copyright laws and may not be copied, sold, or reused outside the app.</p>
 
-  <h2>4. Termination</h2>
-  <p>You may delete your account at any time by using the "Delete Account" feature in the Settings section of the app. Once deleted, your data will be removed from our systems unless we are required by law to retain certain information.</p>
-  <p>We reserve the right to remove accounts that violate these terms or are found to be misused.</p>
-  
-  <h2>5. Changes to the Terms</h2>
-  <p>We may update these terms from time to time. If we do, we will notify you in the app or by email.</p>
+  <h2>4. App Changes and Updates</h2>
+  <p>We may modify or discontinue certain features at any time without notice. Your continued use of the app after such changes means you accept the updated terms.</p>
+
+  <h2>5. Disclaimer</h2>
+  <p>RexSound is provided "as is" without warranties of any kind. We are not responsible for any direct or indirect consequences resulting from the use of the app.</p>
 
   <h2>6. Contact</h2>
-  <p>If you have questions about these terms, please contact us at <a href="mailto:support@nexis.vn">support@nexis.vn</a>.</p>
+  <p>If you have any questions about these terms, please contact us at <a href="mailto:support@nexis.vn">support@nexis.vn</a>.</p>
 
-  <p><em>Last updated: May 20, 2025</em></p>
+  <p><em>Last updated: May 24, 2025</em></p>
 
 </body>
 </html>
